--- a/_sass/_academic-site.scss
+++ b/_sass/_academic-site.scss
@@ -454,12 +454,6 @@ select:focus {
   .profile-links {
     gap: 0.8rem;
   }
-
-  .navbar a,
-  .site-nav a {
-    margin-right: 1.2rem;
-    margin-bottom: 0.4rem;
-  }
 }
 
 @media (max-width: 650px) {
